--- a/css/main.css
+++ b/css/main.css
@@ -10,4 +10,84 @@ html {
   -webkit-box-sizing: inherit;
           box-sizing: inherit;
 }
+
+body {
+  font-size: 1.6rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.container {
+  position: relative;
+  width: 120rem;
+  margin: 2rem auto;
+  padding: 0 2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.buttons {
+  width: 100%;
+  margin-bottom: 2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+.buttons .btn {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  margin: 0 .5rem;
+  padding: .5rem 1rem;
+  color: #fff;
+  background-color: #ddd;
+  cursor: pointer;
+}
+
+.buttons .btn.active {
+  background-color: #444;
+}
+
+.buttons .btn:nth-child(2) {
+  font-size: 1.5em;
+}
+
+.buttons .btn:nth-child(3) {
+  font-size: 2em;
+}
+
+.content {
+  font-size: 1em;
+  color: #444;
+}
+
+.content h1, .content p {
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
 /*# sourceMappingURL=main.css.map */
